swift/Sources/WorkoutLiner/Parser/WorkoutlinerParser.swift
// Generated from Workoutliner.g4 by ANTLR 4.13.2
import Antlr4

open class WorkoutlinerParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = WorkoutlinerParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(WorkoutlinerParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, NUMBER = 1, X = 2, BY = 3, WORD = 4, NEWLINE = 5, WS = 6
	}

	public
	static let RULE_paragraph = 0, RULE_line = 1, RULE_exerciseLine = 2, RULE_proseLine = 3, 
            RULE_numericToken = 4, RULE_token = 5, RULE_byExpr = 6, RULE_multiplier = 7, 
            RULE_number = 8, RULE_note = 9

	public
	static let ruleNames: [String] = [
		"paragraph", "line", "exerciseLine", "proseLine", "numericToken", "token", 
		"byExpr", "multiplier", "number", "note"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, nil, nil, nil, nil, "'\\n'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "NUMBER", "X", "BY", "WORD", "NEWLINE", "WS"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "Workoutliner.g4" }

	override open
	func getRuleNames() -> [String] { return WorkoutlinerParser.ruleNames }

	override open
	func getSerializedATN() -> [Int] { return WorkoutlinerParser._serializedATN }

	override open
	func getATN() -> ATN { return WorkoutlinerParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return WorkoutlinerParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,WorkoutlinerParser._ATN,WorkoutlinerParser._decisionToDFA, WorkoutlinerParser._sharedContextCache)
	}


	public class ParagraphContext: ParserRuleContext {
			open
			func EOF() -> TerminalNode? {
				return getToken(WorkoutlinerParser.Tokens.EOF.rawValue, 0)
			}
			open
			func line() -> [LineContext] {
				return getRuleContexts(LineContext.self)
			}
			open
			func line(_ i: Int) -> LineContext? {
				return getRuleContext(LineContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return WorkoutlinerParser.RULE_paragraph
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.enterParagraph(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.exitParagraph(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WorkoutlinerVisitor {
			    return visitor.visitParagraph(self)
			}
			else if let visitor = visitor as? WorkoutlinerBaseVisitor {
			    return visitor.visitParagraph(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func paragraph() throws -> ParagraphContext {
		var _localctx: ParagraphContext
		_localctx = ParagraphContext(_ctx, getState())
		try enterRule(_localctx, 0, WorkoutlinerParser.RULE_paragraph)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(21) 
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	repeat {
		 		setState(20)
		 		try line()


		 		setState(23); 
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	} while (_la == WorkoutlinerParser.Tokens.WORD.rawValue)
		 	setState(25)
		 	try match(WorkoutlinerParser.Tokens.EOF.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class LineContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return WorkoutlinerParser.RULE_line
		}
	}
	public class ExerciseLineAltContext: LineContext {
			open
			func exerciseLine() -> ExerciseLineContext? {
				return getRuleContext(ExerciseLineContext.self, 0)
			}
			open
			func NEWLINE() -> TerminalNode? {
				return getToken(WorkoutlinerParser.Tokens.NEWLINE.rawValue, 0)
			}

		public
		init(_ ctx: LineContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.enterExerciseLineAlt(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.exitExerciseLineAlt(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WorkoutlinerVisitor {
			    return visitor.visitExerciseLineAlt(self)
			}
			else if let visitor = visitor as? WorkoutlinerBaseVisitor {
			    return visitor.visitExerciseLineAlt(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class ProseLineAltContext: LineContext {
			open
			func proseLine() -> ProseLineContext? {
				return getRuleContext(ProseLineContext.self, 0)
			}
			open
			func NEWLINE() -> TerminalNode? {
				return getToken(WorkoutlinerParser.Tokens.NEWLINE.rawValue, 0)
			}

		public
		init(_ ctx: LineContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.enterProseLineAlt(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.exitProseLineAlt(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WorkoutlinerVisitor {
			    return visitor.visitProseLineAlt(self)
			}
			else if let visitor = visitor as? WorkoutlinerBaseVisitor {
			    return visitor.visitProseLineAlt(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func line() throws -> LineContext {
		var _localctx: LineContext
		_localctx = LineContext(_ctx, getState())
		try enterRule(_localctx, 2, WorkoutlinerParser.RULE_line)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(35)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,3, _ctx)) {
		 	case 1:
		 		_localctx =  ExerciseLineAltContext(_localctx);
		 		try enterOuterAlt(_localctx, 1)
		 		setState(27)
		 		try exerciseLine()
		 		setState(29)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		if (_la == WorkoutlinerParser.Tokens.NEWLINE.rawValue) {
		 			setState(28)
		 			try match(WorkoutlinerParser.Tokens.NEWLINE.rawValue)

		 		}


		 		break
		 	case 2:
		 		_localctx =  ProseLineAltContext(_localctx);
		 		try enterOuterAlt(_localctx, 2)
		 		setState(31)
		 		try proseLine()
		 		setState(33)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		if (_la == WorkoutlinerParser.Tokens.NEWLINE.rawValue) {
		 			setState(32)
		 			try match(WorkoutlinerParser.Tokens.NEWLINE.rawValue)

		 		}


		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ExerciseLineContext: ParserRuleContext {
			open
			func numericToken() -> NumericTokenContext? {
				return getRuleContext(NumericTokenContext.self, 0)
			}
			open
			func WORD() -> [TerminalNode] {
				return getTokens(WorkoutlinerParser.Tokens.WORD.rawValue)
			}
			open
			func WORD(_ i:Int) -> TerminalNode? {
				return getToken(WorkoutlinerParser.Tokens.WORD.rawValue, i)
			}
			open
			func token() -> [TokenContext] {
				return getRuleContexts(TokenContext.self)
			}
			open
			func token(_ i: Int) -> TokenContext? {
				return getRuleContext(TokenContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return WorkoutlinerParser.RULE_exerciseLine
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.enterExerciseLine(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.exitExerciseLine(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WorkoutlinerVisitor {
			    return visitor.visitExerciseLine(self)
			}
			else if let visitor = visitor as? WorkoutlinerBaseVisitor {
			    return visitor.visitExerciseLine(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func exerciseLine() throws -> ExerciseLineContext {
		var _localctx: ExerciseLineContext
		_localctx = ExerciseLineContext(_ctx, getState())
		try enterRule(_localctx, 4, WorkoutlinerParser.RULE_exerciseLine)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
			var _alt:Int
		 	try enterOuterAlt(_localctx, 1)
		 	setState(38) 
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	repeat {
		 		setState(37)
		 		try match(WorkoutlinerParser.Tokens.WORD.rawValue)


		 		setState(40); 
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	} while (_la == WorkoutlinerParser.Tokens.WORD.rawValue)
		 	setState(42)
		 	try numericToken()
		 	setState(46)
		 	try _errHandler.sync(self)
		 	_alt = try getInterpreter().adaptivePredict(_input,5,_ctx)
		 	while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
		 		if ( _alt==1 ) {
		 			setState(43)
		 			try token()

		 	 
		 		}
		 		setState(48)
		 		try _errHandler.sync(self)
		 		_alt = try getInterpreter().adaptivePredict(_input,5,_ctx)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ProseLineContext: ParserRuleContext {
			open
			func WORD() -> [TerminalNode] {
				return getTokens(WorkoutlinerParser.Tokens.WORD.rawValue)
			}
			open
			func WORD(_ i:Int) -> TerminalNode? {
				return getToken(WorkoutlinerParser.Tokens.WORD.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return WorkoutlinerParser.RULE_proseLine
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.enterProseLine(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.exitProseLine(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WorkoutlinerVisitor {
			    return visitor.visitProseLine(self)
			}
			else if let visitor = visitor as? WorkoutlinerBaseVisitor {
			    return visitor.visitProseLine(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func proseLine() throws -> ProseLineContext {
		var _localctx: ProseLineContext
		_localctx = ProseLineContext(_ctx, getState())
		try enterRule(_localctx, 6, WorkoutlinerParser.RULE_proseLine)
		defer {
	    		try! exitRule()
	    }
		do {
			var _alt:Int
		 	try enterOuterAlt(_localctx, 1)
		 	setState(50); 
		 	try _errHandler.sync(self)
		 	_alt = 1;
		 	repeat {
		 		switch (_alt) {
		 		case 1:
		 			setState(49)
		 			try match(WorkoutlinerParser.Tokens.WORD.rawValue)


		 			break
		 		default:
		 			throw ANTLRException.recognition(e: NoViableAltException(self))
		 		}
		 		setState(52); 
		 		try _errHandler.sync(self)
		 		_alt = try getInterpreter().adaptivePredict(_input,6,_ctx)
		 	} while (_alt != 2 && _alt !=  ATN.INVALID_ALT_NUMBER)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class NumericTokenContext: ParserRuleContext {
			open
			func byExpr() -> ByExprContext? {
				return getRuleContext(ByExprContext.self, 0)
			}
			open
			func multiplier() -> MultiplierContext? {
				return getRuleContext(MultiplierContext.self, 0)
			}
			open
			func number() -> NumberContext? {
				return getRuleContext(NumberContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return WorkoutlinerParser.RULE_numericToken
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.enterNumericToken(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.exitNumericToken(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WorkoutlinerVisitor {
			    return visitor.visitNumericToken(self)
			}
			else if let visitor = visitor as? WorkoutlinerBaseVisitor {
			    return visitor.visitNumericToken(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func numericToken() throws -> NumericTokenContext {
		var _localctx: NumericTokenContext
		_localctx = NumericTokenContext(_ctx, getState())
		try enterRule(_localctx, 8, WorkoutlinerParser.RULE_numericToken)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(57)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,7, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(54)
		 		try byExpr()

		 		break
		 	case 2:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(55)
		 		try multiplier()

		 		break
		 	case 3:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(56)
		 		try number()

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class TokenContext: ParserRuleContext {
			open
			func numericToken() -> NumericTokenContext? {
				return getRuleContext(NumericTokenContext.self, 0)
			}
			open
			func note() -> NoteContext? {
				return getRuleContext(NoteContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return WorkoutlinerParser.RULE_token
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.enterToken(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.exitToken(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WorkoutlinerVisitor {
			    return visitor.visitToken(self)
			}
			else if let visitor = visitor as? WorkoutlinerBaseVisitor {
			    return visitor.visitToken(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func token() throws -> TokenContext {
		var _localctx: TokenContext
		_localctx = TokenContext(_ctx, getState())
		try enterRule(_localctx, 10, WorkoutlinerParser.RULE_token)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(61)
		 	try _errHandler.sync(self)
		 	switch (WorkoutlinerParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .NUMBER:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(59)
		 		try numericToken()

		 		break

		 	case .WORD:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(60)
		 		try note()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ByExprContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return WorkoutlinerParser.RULE_byExpr
		}
	}
	public class TwoPartByContext: ByExprContext {
		public var reps: Token!
		public var weight: Token!
			open
			func BY() -> TerminalNode? {
				return getToken(WorkoutlinerParser.Tokens.BY.rawValue, 0)
			}
			open
			func NUMBER() -> [TerminalNode] {
				return getTokens(WorkoutlinerParser.Tokens.NUMBER.rawValue)
			}
			open
			func NUMBER(_ i:Int) -> TerminalNode? {
				return getToken(WorkoutlinerParser.Tokens.NUMBER.rawValue, i)
			}

		public
		init(_ ctx: ByExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.enterTwoPartBy(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.exitTwoPartBy(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WorkoutlinerVisitor {
			    return visitor.visitTwoPartBy(self)
			}
			else if let visitor = visitor as? WorkoutlinerBaseVisitor {
			    return visitor.visitTwoPartBy(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class ThreePartByContext: ByExprContext {
		public var sets: Token!
		public var reps: Token!
		public var weight: Token!
			open
			func BY() -> [TerminalNode] {
				return getTokens(WorkoutlinerParser.Tokens.BY.rawValue)
			}
			open
			func BY(_ i:Int) -> TerminalNode? {
				return getToken(WorkoutlinerParser.Tokens.BY.rawValue, i)
			}
			open
			func NUMBER() -> [TerminalNode] {
				return getTokens(WorkoutlinerParser.Tokens.NUMBER.rawValue)
			}
			open
			func NUMBER(_ i:Int) -> TerminalNode? {
				return getToken(WorkoutlinerParser.Tokens.NUMBER.rawValue, i)
			}

		public
		init(_ ctx: ByExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.enterThreePartBy(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.exitThreePartBy(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WorkoutlinerVisitor {
			    return visitor.visitThreePartBy(self)
			}
			else if let visitor = visitor as? WorkoutlinerBaseVisitor {
			    return visitor.visitThreePartBy(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func byExpr() throws -> ByExprContext {
		var _localctx: ByExprContext
		_localctx = ByExprContext(_ctx, getState())
		try enterRule(_localctx, 12, WorkoutlinerParser.RULE_byExpr)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(71)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,9, _ctx)) {
		 	case 1:
		 		_localctx =  TwoPartByContext(_localctx);
		 		try enterOuterAlt(_localctx, 1)
		 		setState(63)
		 		try {
		 				let assignmentValue = try match(WorkoutlinerParser.Tokens.NUMBER.rawValue)
		 				_localctx.castdown(TwoPartByContext.self).reps = assignmentValue
		 		     }()

		 		setState(64)
		 		try match(WorkoutlinerParser.Tokens.BY.rawValue)
		 		setState(65)
		 		try {
		 				let assignmentValue = try match(WorkoutlinerParser.Tokens.NUMBER.rawValue)
		 				_localctx.castdown(TwoPartByContext.self).weight = assignmentValue
		 		     }()


		 		break
		 	case 2:
		 		_localctx =  ThreePartByContext(_localctx);
		 		try enterOuterAlt(_localctx, 2)
		 		setState(66)
		 		try {
		 				let assignmentValue = try match(WorkoutlinerParser.Tokens.NUMBER.rawValue)
		 				_localctx.castdown(ThreePartByContext.self).sets = assignmentValue
		 		     }()

		 		setState(67)
		 		try match(WorkoutlinerParser.Tokens.BY.rawValue)
		 		setState(68)
		 		try {
		 				let assignmentValue = try match(WorkoutlinerParser.Tokens.NUMBER.rawValue)
		 				_localctx.castdown(ThreePartByContext.self).reps = assignmentValue
		 		     }()

		 		setState(69)
		 		try match(WorkoutlinerParser.Tokens.BY.rawValue)
		 		setState(70)
		 		try {
		 				let assignmentValue = try match(WorkoutlinerParser.Tokens.NUMBER.rawValue)
		 				_localctx.castdown(ThreePartByContext.self).weight = assignmentValue
		 		     }()


		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class MultiplierContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return WorkoutlinerParser.RULE_multiplier
		}
	}
	public class PartialMultiplierContext: MultiplierContext {
		public var sets: Token!
		public var reps: Token!
			open
			func X() -> TerminalNode? {
				return getToken(WorkoutlinerParser.Tokens.X.rawValue, 0)
			}
			open
			func NUMBER() -> [TerminalNode] {
				return getTokens(WorkoutlinerParser.Tokens.NUMBER.rawValue)
			}
			open
			func NUMBER(_ i:Int) -> TerminalNode? {
				return getToken(WorkoutlinerParser.Tokens.NUMBER.rawValue, i)
			}

		public
		init(_ ctx: MultiplierContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.enterPartialMultiplier(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.exitPartialMultiplier(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WorkoutlinerVisitor {
			    return visitor.visitPartialMultiplier(self)
			}
			else if let visitor = visitor as? WorkoutlinerBaseVisitor {
			    return visitor.visitPartialMultiplier(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class FullMultiplierContext: MultiplierContext {
		public var sets: Token!
		public var reps: Token!
		public var weight: Token!
			open
			func X() -> [TerminalNode] {
				return getTokens(WorkoutlinerParser.Tokens.X.rawValue)
			}
			open
			func X(_ i:Int) -> TerminalNode? {
				return getToken(WorkoutlinerParser.Tokens.X.rawValue, i)
			}
			open
			func NUMBER() -> [TerminalNode] {
				return getTokens(WorkoutlinerParser.Tokens.NUMBER.rawValue)
			}
			open
			func NUMBER(_ i:Int) -> TerminalNode? {
				return getToken(WorkoutlinerParser.Tokens.NUMBER.rawValue, i)
			}

		public
		init(_ ctx: MultiplierContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.enterFullMultiplier(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.exitFullMultiplier(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WorkoutlinerVisitor {
			    return visitor.visitFullMultiplier(self)
			}
			else if let visitor = visitor as? WorkoutlinerBaseVisitor {
			    return visitor.visitFullMultiplier(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func multiplier() throws -> MultiplierContext {
		var _localctx: MultiplierContext
		_localctx = MultiplierContext(_ctx, getState())
		try enterRule(_localctx, 14, WorkoutlinerParser.RULE_multiplier)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(81)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,10, _ctx)) {
		 	case 1:
		 		_localctx =  PartialMultiplierContext(_localctx);
		 		try enterOuterAlt(_localctx, 1)
		 		setState(73)
		 		try {
		 				let assignmentValue = try match(WorkoutlinerParser.Tokens.NUMBER.rawValue)
		 				_localctx.castdown(PartialMultiplierContext.self).sets = assignmentValue
		 		     }()

		 		setState(74)
		 		try match(WorkoutlinerParser.Tokens.X.rawValue)
		 		setState(75)
		 		try {
		 				let assignmentValue = try match(WorkoutlinerParser.Tokens.NUMBER.rawValue)
		 				_localctx.castdown(PartialMultiplierContext.self).reps = assignmentValue
		 		     }()


		 		break
		 	case 2:
		 		_localctx =  FullMultiplierContext(_localctx);
		 		try enterOuterAlt(_localctx, 2)
		 		setState(76)
		 		try {
		 				let assignmentValue = try match(WorkoutlinerParser.Tokens.NUMBER.rawValue)
		 				_localctx.castdown(FullMultiplierContext.self).sets = assignmentValue
		 		     }()

		 		setState(77)
		 		try match(WorkoutlinerParser.Tokens.X.rawValue)
		 		setState(78)
		 		try {
		 				let assignmentValue = try match(WorkoutlinerParser.Tokens.NUMBER.rawValue)
		 				_localctx.castdown(FullMultiplierContext.self).reps = assignmentValue
		 		     }()

		 		setState(79)
		 		try match(WorkoutlinerParser.Tokens.X.rawValue)
		 		setState(80)
		 		try {
		 				let assignmentValue = try match(WorkoutlinerParser.Tokens.NUMBER.rawValue)
		 				_localctx.castdown(FullMultiplierContext.self).weight = assignmentValue
		 		     }()


		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class NumberContext: ParserRuleContext {
			open
			func NUMBER() -> TerminalNode? {
				return getToken(WorkoutlinerParser.Tokens.NUMBER.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return WorkoutlinerParser.RULE_number
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.enterNumber(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? WorkoutlinerListener {
				listener.exitNumber(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? WorkoutlinerVisitor {
			    return visitor.visitNumber(self)
			}
			else if let visitor = visitor as? WorkoutlinerBaseVisitor {
			    return visitor.visitNumber(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func number() throws -> NumberContext {
		var _localctx: NumberContext
		_localctx = NumberContext(_ctx, getState())
		try enterRule(_localctx, 16, WorkoutlinerParser.RULE_number)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(83)
		 	try match(WorkoutlinerParser.Tokens.NUMBER.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
